functions refactored (#14)
* functions refactored

* List.of to Arrays.asList

* updated