@@ -12,34 +12,40 @@ import java.util.stream.Collectors;
 
 public class FunctionConsumerSupplierPredicate {
 
+    private static final Consumer<String> PRINT_STRING_CONSUMER = System.out::println;
+
+    private static final Function<String, Integer> STRING_LENGTH_FUNCTION = String::length; // Accepts String......Returns Integer
+
+    private static final Predicate<String> STARTS_WITH_M_PREDICATE = str -> "M".startsWith(str);
+
+    private static final Predicate<String> LENGTH_GREATER_THAN_5_PREDICATE = str -> str.length() > 5;
+
+    private static final Supplier<Double> RANDOM_DOUBLE_SUPPLIER = () -> Math.random();
+
+    private static final DoubleSupplier PRIMITIVE_DOUBLE_SUPPLIER = Math::random;
+
+    private static final Optional<Double> OPTIONAL_DOUBLE = Optional.empty();
+
     /**
      * >>>>>>>>>> CONSUMER <<<<<<<<<<
      * <p>
      * A CONSUMER is a functional interface that accepts a single input and returns no output
      **/
 
-    public static void whenNamesPresentConsumeAll() {
-        List<String> cities = List.of("Sydney", "Mumbai", "New York", "London");
-        Consumer<String> printConsumer = System.out::println;
-        cities.stream().forEach(printConsumer);
-    }
+    public static void testConsumer() {
+        /**Print all cities**/
+        List<String> cities = Arrays.asList("Sydney", "Mumbai", "New York", "London");
+        cities.stream().forEach(PRINT_STRING_CONSUMER);
 
-    public static void whenNamesPresentUseBothConsumer() {
-        List<String> cities = List.of("Sydney", "Mumbai", "New York", "London");
-
-        // Consumers
+        /**Uppercase and Print all cities**/
         // uppercaseConsumer is ugly because of the String's immutability feature
         Consumer<List<String>> uppercaseConsumer = list -> {
-            for (int i = 0; i < list.size(); i++) {
-                list.set(i, list.get(i).toUpperCase());
-            }
+            for (int i = 0; i < list.size(); i++) list.set(i, list.get(i).toUpperCase());
         };
         Consumer<List<String>> printConsumer = list -> list.stream().forEach(System.out::println);
-
         uppercaseConsumer.andThen(printConsumer).accept(cities);
-    }
 
-    public static void consumerForRandomEntity() {
+        /**Uppercase attr and Print all Random Entities**/
         List<RandomEntity> newClassList = List.of(new RandomEntity("abc"), new RandomEntity("pqr"), new RandomEntity("xyz"));
         Consumer<List<RandomEntity>> upperNewClass = list -> list.forEach(element -> element.setAttr(element.getAttr().toUpperCase()));
         Consumer<List<RandomEntity>> printNewClass = list -> list.stream().forEach(System.out::println);
@@ -57,10 +63,10 @@ public class FunctionConsumerSupplierPredicate {
      **/
 
     public static void testFunctions() {
-        List<String> names = Arrays.asList("Swarup", "Tapan", "Mayur", "Milind", "Jaswinder", "Rahul", "Ganapathy");
-        // Accepts String......Returns Integer
-        Function<String, Integer> nameMappingFunction = String::length;
-        List<Integer> nameLength = names.stream().map(nameMappingFunction).collect(Collectors.toList());
+        List<String> names = List.of("Swarup", "Tapan", "Mayur", "Milind", "Jaswinder", "Rahul", "Ganapathy");
+
+        /**Collect of length of names from the names list**/
+        List<Integer> nameLength = names.stream().map(STRING_LENGTH_FUNCTION).collect(Collectors.toList());
         System.out.println(nameLength);
     }
 
@@ -71,16 +77,14 @@ public class FunctionConsumerSupplierPredicate {
      * This is mainly used to filter data from a Java Stream.
      **/
     public static void testPredicate() {
-        List<String> names = Arrays.asList("Swarup", "Tapan", "Mayur", "Milind", "Jaswinder", "Rahul", "Ganapathy");
-        Predicate<String> nameStartsWithM = str -> str.startsWith("M");
-        names.stream().filter(nameStartsWithM).forEach(System.out::println);
-    }
+        List<String> names = List.of("Swarup", "Tapan", "Mayur", "Milind", "Jaswinder", "Rahul", "Ganapathy");
 
-    public static void testPredicateAndComposition() {
-        List<String> names = Arrays.asList("Swarup", "Tapan", "Mayur", "Milind", "Jaswinder", "Rahul", "Ganapathy");
-        Predicate<String> startPredicate = str -> str.startsWith("M");
-        Predicate<String> lengthPredicate = str -> str.length() > 5;
-        names.stream().filter(startPredicate.and(lengthPredicate)).forEach(System.out::println);
+        /**Print names that starts-with M**/
+        names.stream().filter(STARTS_WITH_M_PREDICATE).forEach(System.out::println);
+
+        /**Print names that starts-with M and length greater than 5**/
+        Predicate<String> andPredicate = STARTS_WITH_M_PREDICATE.and(LENGTH_GREATER_THAN_5_PREDICATE);
+        names.stream().filter(andPredicate).forEach(System.out::println);
     }
 
     /**
@@ -93,22 +97,15 @@ public class FunctionConsumerSupplierPredicate {
      **/
 
     public static void testSupplier() {
-        Supplier<Double> doubleSupplier = () -> Math.random();
-        DoubleSupplier primitiveDoubleSupplier = Math::random;
-        Optional<Double> optionalDouble = Optional.empty();
-
-        System.out.println(doubleSupplier.get());
-        System.out.println(primitiveDoubleSupplier.getAsDouble());
-        System.out.println(optionalDouble.orElseGet(doubleSupplier));
+        System.out.println(RANDOM_DOUBLE_SUPPLIER.get());
+        System.out.println(PRIMITIVE_DOUBLE_SUPPLIER.getAsDouble());
+        System.out.println(OPTIONAL_DOUBLE.orElseGet(RANDOM_DOUBLE_SUPPLIER));
     }
 
     public static void main(String[] args) {
-        whenNamesPresentConsumeAll();
-        whenNamesPresentUseBothConsumer();
-        consumerForRandomEntity();
+        testConsumer();
 
         testPredicate();
-        testPredicateAndComposition();
 
         testFunctions();
 
